--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Google Verification -->
+ <meta name="google-site-verification" content="jVUtQzpO2yQ6lrbuCTJr9sd-70C3MANoEZFGWyd82SM" />
+  
+  <!-- Required Jekyll Tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ page.title | default: site.title }}</title>
+  
+  <!-- Theme CSS (Minima) -->
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+</head>
+<body>
+  <!-- Your Content -->
+  {{ content }} <!-- Critical - injects index.md -->
+</body>
+</html>
